workout.css
/*
table, th, td {
	text-align: center;
	border: solid;
	border-width: thin;
	border-collapse: collapse;
}
*/


form {
	margin-top: 5px;
	margin-right: 5px;
	margin-bottom: 5px;
	margin-left: 5px;
}

table {
	margin-top: 5px;
	margin-right: 5px;
	margin-bottom: 5px;
	margin-left: 5px;
	max-height: 600px;
}

h1 {
	margin-left: 10px;
}

.card-style {
	box-shadow: 0 2px 5px rgba(0, 0, 0, 0.26);
    min-height: 56px;
    transition: min-height 0.3s;
    transition-property: min-height;
    transition-duration: 0.3s;
    transition-timing-function: initial;
    transition-delay: initial;
    padding-top: 10px;
    padding-right: 10px;
    padding-bottom: 10px;
    padding-left: 10px;
}

#table-container {
	padding-right: 15px;
	margin-left: 5px;
	margin-right: 10px;
}

#form-container {
	margin-right: 5px;
	margin-left: 10px;
}

#Delete {
	margin-left: 5px;
}

.col-md-12 {
	background-color: #FFEB3B
	bottom: 20px;
}

